feat: create wallet service (#42)
